force-app/main/default/objects/Workout_Plan__c/Workout_Plan__c.object-meta.xml
<CustomObject>
    <label>Workout Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workout Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>