force-app/main/default/objects/Workout_Plan__c/fields/Chest__c.field-meta.xml
<CustomField>
    <fullName>Chest__c</fullName>
    <label>Chest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>