force-app/main/default/objects/Workout_Plan__c/fields/Exercise_1__c.field-meta.xml
<CustomField>
    <fullName>Exercise_1__c</fullName>
    <label>Exercise 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>