force-app/main/default/objects/Workout_Plan__c/fields/Exercise_2__c.field-meta.xml
<CustomField>
    <fullName>Exercise_2__c</fullName>
    <label>Exercise 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>