force-app/main/default/objects/Workout_Plan__c/fields/Exercise_3__c.field-meta.xml
<CustomField>
    <fullName>Exercise_3__c</fullName>
    <label>Exercise 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>