force-app/main/default/objects/Workout_Plan__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>