force-app/main/default/objects/Workout_Plan__c/fields/Time_1__c.field-meta.xml
<CustomField>
    <fullName>Time_1__c</fullName>
    <label>Time 1</label>
    <type>Time</type>
</CustomField>