force-app/main/default/objects/Workout_Plan__c/fields/Time_2__c.field-meta.xml
<CustomField>
    <fullName>Time_2__c</fullName>
    <label>Time 2</label>
    <type>Time</type>
</CustomField>