force-app/main/default/objects/Workout_Plan__c/fields/Time_3__c.field-meta.xml
<CustomField>
    <fullName>Time_3__c</fullName>
    <label>Time 3</label>
    <type>Time</type>
</CustomField>