force-app/main/default/objects/Workout_Plan__c/fields/Waistline__c.field-meta.xml
<CustomField>
    <fullName>Waistline__c</fullName>
    <label>Waistline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>